# P3DH

./: .gitignore  BUILD_SUMMARY.md  CODE_QUALITY.md  Compare.py  QUICKSTART.md  README.md  app.py  app_backup.py  convert_data.py  dashboard.py  main.py  pyproject.toml  run.bat  run.ps1
.streamlit/: config.toml
components/: charts.py  downloads.py  insights.py  selectors.py
data/: TR_Metadata.xlsx  tr_cre.parquet
docs/: README.md
pages/: 1_Overview.py  2_Compare.py  3_Analytics.py  Compare.py  Data_Info.py  Regional_Analysis.py
src/: bank_catalog.py  config.py  data_loader.py  data_processor.py  metric_catalog.py
